packages/build/tests/error/fixtures/early_exit/plugin.js
const { env, pid } = require('process')

module.exports = {
  onPreBuild() {
    env.TEST_PID = pid
  },
  onPostBuild() {},
}
